--- a/src/components/forms/style.scss
+++ b/src/components/forms/style.scss
@@ -18,16 +18,24 @@
   display: flex;
   -ms-flex-align: center;
   align-items: center;
-  margin: 15px 0;
+  margin: 20px 0;
 
   input {
-    font-size: 16px;
+    font-size: 14px;
     width: 100%;
+    height: 7vh;
     padding: 11px 15px 11px 8px;
     color: #fff;
     background-color: transparent;
     &::placeholder {
-      color: #87bbfd;
+      color: #a7a6a6;
+    }
+  }
+}
+@media screen and (min-width: 500px) {
+  .form-field {
+    input {
+      font-size: 20px;
     }
   }
 }
