--- a/src/components/forms/style.scss
+++ b/src/components/forms/style.scss
@@ -19,17 +19,22 @@
   -ms-flex-align: center;
   align-items: center;
   margin: 20px 0;
+  width: 100%;
 
   input {
     font-size: 14px;
     width: 100%;
     height: 7vh;
     padding: 11px 15px 11px 8px;
-    color: #fff;
+    color: black;
     background-color: transparent;
     &::placeholder {
       color: #a7a6a6;
     }
+    outline: black;
+  }
+  .shortBox {
+    margin: auto 10px;
   }
 }
 @media screen and (min-width: 500px) {
