--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -630,22 +630,35 @@
         .discount {
           display: flex;
           width: 100%;
-          justify-content: center;
-          padding: 20px 0;
+          justify-content: space-between;
+          padding-top: 15px;
           input {
             outline: black;
             height: 40px;
             text-transform: uppercase;
-            &:nth-child(1) {
-              width: 80%;
-              font-size: 12px;
+            margin-right: 10px;
+            width: 65%;
+            font-size: 12px;
+          }
+          .error {
+            border: solid 2px #fe8c8c;
+            animation: shake 0.3s linear;
+          }
+          @keyframes shake {
+            0% {
+              margin-left: 10px;
             }
-            &:nth-child(2) {
-              width: 40%;
-              background-color: $primary-color;
-              color: $secondary-color;
-              font-size: 14px;
-              font-weight: bold;
+            25% {
+              margin-left: 15px;
+            }
+            50% {
+              margin-left: 10px;
+            }
+            75% {
+              margin-left: 15px;
+            }
+            100% {
+              margin-left: 10px;
             }
           }
         }
@@ -661,6 +674,118 @@
     }
     .billing-detail {
     }
+  }
+}
+.button {
+  position: relative;
+  width: 30%;
+  height: 40px;
+  background-color: $primary-color;
+  color: $secondary-color;
+  outline: none;
+  cursor: pointer;
+
+  .icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    animation: bounce 1s ease;
+    animation-fill-mode: forwards;
+
+    @keyframes bounce {
+      0% {
+        background: $secondary-color;
+        border-radius: 50%;
+        opacity: 0.9;
+      }
+
+      100% {
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
+  .text {
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 30%;
+    width: 100%;
+    color: $secondary-color;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    animation: pop 0.4s ease;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+
+    @keyframes pop {
+      30% {
+        opacity: 0.5;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.code-apply {
+  position: absolute;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: bold;
+  width: 100%;
+  height: 100%;
+  background-color: $primary-color;
+  color: $secondary-color;
+}
+.loading {
+  position: absolute;
+  right: 30%;
+  top: 10%;
+
+  margin: auto;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: solid 2px $secondary-color;
+  border-left-color: $third-color;
+  border-bottom-color: $third-color;
+  background-color: $primary-color;
+  animation: rotate 1.4s ease 0.5s infinite;
+  animation-fill-mode: forwards;
+  @keyframes rotate {
+    0% {
+      transform: rotate(360deg);
+    }
+  }
+}
+.closebtn {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 500px) {
+  .button {
+    .text {
+      visibility: visible;
+    }
+    .icon {
+      @keyframes bounce {
+        100% {
+          transform: translate(-270%, -50%);
+        }
+      }
+    }
+  }
+  .loading {
+    right: 40%;
   }
 }
 .product-table {
@@ -758,6 +883,21 @@
     font-weight: bold;
   }
 }
+.first-table,
+.second-table {
+  font-size: 14px;
+  width: 100%;
+  tr > td,
+  th {
+    &:nth-child(2) {
+      text-align: right;
+    }
+  }
+  tr > th {
+    font-size: 18px;
+  }
+}
+
 @media screen and (min-width: 500px) {
   .payment-success {
     width: 80%;
@@ -788,33 +928,80 @@
     }
   }
 }
-.sub-table {
-  font-size: 14px;
-  width: 100%;
-  tr > td,
-  th {
-    &:nth-child(2) {
-      text-align: right;
-    }
-  }
-  tr {
-    th {
-      font-size: 18px;
-    }
-    &:nth-child(2),
-    &:nth-child(4) {
-      td,
-      th {
-        padding: 10px 0;
-      }
-    }
-  }
-}
+
 @media screen and (min-width: 1500px) {
   .sub-table {
     font-size: 16px;
     tr > th {
       font-size: 22px;
+    }
+  }
+}
+
+//ACCOUNT PAGE
+.contact > p,
+.address > p,
+.payment-method > p,
+.order-history > p {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+}
+.account {
+  width: 95%;
+  margin: auto;
+  padding: 40px 0px;
+  h1 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .contact {
+    &__info {
+      div > span {
+        font-weight: bold;
+      }
+    }
+  }
+  .address {
+    &__info {
+      text-transform: capitalize;
+      .shipping > p,
+      .billing > p {
+        font-weight: bold;
+      }
+    }
+  }
+  .order-history {
+    cursor: pointer;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 5px;
+
+    background-color: $secondary-color;
+    color: black;
+
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    .icon {
+      margin-right: 20px;
+    }
+  }
+}
+.no-record {
+  color: $third-color;
+}
+@media screen and (min-width: 400px) {
+  .account {
+    .contact,
+    .address {
+      &__info {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
 }
